Mon Jul 26 13:40:13 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/XML/XercesString.h:
        * tools/XML/XercesString.cpp:

          Tweak a preprocessor check for MSVC and unicode.

Mon Jul 26 13:01:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:

          Added property for CPU Affinity.

        * DAnCE/LocalityManager/Configuration/CPU_Affinity.cpp:

          Bugfix.

        * DAnCE/tests/LocalityManager/CPUAffinity:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity.idl:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity.mpc:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity_exec.h:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity_exec.cpp:
        * DAnCE/tests/LocalityManager/CPUAffinity/Component.cdp:
        * DAnCE/tests/LocalityManager/CPUAffinity/run_test.pl:
        * bin/ciao_tests.lst:

          Added test for CPUAffinity.  Must have MULTICORE set for test
          script.  This test requires at least 2 processors/cores.

Mon Jul 26 12:29:14 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Update

Mon Jul 26 11:57:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * CIAO-INSTALL.html:
          Extended with a link to DDS4CCM install. Also
          extended the CIAO build section a bit.

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          How to build and install DDS4CCM

        * connectors/dds4ccm/docs/DDS4CCM Cheat Sheet.rtf:
          Summary of how the DDS4CCM connector is designed.

        * connectors/dds4ccm/impl/ContentFilteredTopic_T.h:
          Added Copy_disabled as base class.

        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/Receiver/QCTQ_Test_Receiver_exec.cpp:
          Corrected number of samples to be received
